<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_course"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_course"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/about"
        app:showAsAction="always" />
    <item
        android:id="@+id/bscis_semester_1"
        android:title="@string/bscis_semester1" />
    <item
        android:id="@+id/bscis_semester_2"
        android:title="@string/bscis_semester2" />
    <item
        android:id="@+id/bscis_semester_3"
        android:title="@string/bscis_semester3" />
    <item
        android:id="@+id/bscis_semester_4"
        android:title="@string/bscis_semester4" />
    <item
        android:id="@+id/bscis_semester_5"
        android:title="@string/bscis_semester5" />
    <item
        android:id="@+id/bscis_semester_6"
        android:title="@string/bscis_semester6" />
    <item
        android:id="@+id/bscis_semester_7"
        android:title="@string/bscis_semester7" />
    <item
        android:id="@+id/bscis_semester_8"
        android:title="@string/bscis_semester8" />
</menu>
